<resources>
    <string name="app_name">Product Inventory</string>
    <string name="action_settings">Settings</string>
    <string name="prdctName">Product Name</string>
    <string name="prdctPrice">Price</string>
    <string name="prdctQuantity">Quantity</string>
    <string name="prdctSupplier">Product Supplier</string>
    <string name="supplierPhone">Supplier Phone Number</string>
    <string name="saveString">Save</string>
    <string name="deleteString">Delete</string>
    <string name="errorString">Error with inserting product</string>
    <string name="insertedProduct">Product inserted with row id: </string>
    <string name="empty_view_text">There is nothing on database now.\n  You can add product here</string>
    <string name="editor_activity_title_new_product">Add New Product</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <string name="editor_insert_product_successful">Insertion successful</string>
    <string name="editor_insert_product_failed">Insertion failed</string>
    <string name="editor_update_product_successful">Product is succesfully updated</string>
<string name="editor_update_product_failed">Product couldn\'t be updated</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete_all_products_msg">Delete all products from database ?</string>
    <string name="out_of_stock">This product is out of stock!</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_product_failed">Deleting product failed</string>
    <string name="editor_delete_product_successful">Deleting product successful</string>
    <string name="delete_all">Delete All Products</string>
    <string name="minValue">Minimum value</string>
    <string name="discard">Discard</string>
    <string name="currency">&#160;$</string>
    <string name="sale">Sale</string>
    <string name="sold_product">Product sold</string>
</resources>
